# trialibre

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/config/: settings.yaml
backend/config/prompts/: exclusion_matching.jinja2  keyword_generation.jinja2
backend/sandbox/: README.md  ground_truth.json
backend/sandbox/expected_results/: ground_truth.json
backend/sandbox/patients/: alzheimers_74m.json  breast_cancer_38f.json  ckd_55f.json  depression_41f.json  diabetes_45f.json  hiv_29m.json  malaria_5f.json  nsclc_62m.json  pediatric_asthma_8m.json  rheumatoid_arthritis_50m.json  sickle_cell_22f.json  tb_mdr_35m.json
backend/sandbox/protocols/: trial_alzheimers_amyloid.json  trial_alzheimers_tau.json  trial_asthma_biologic.json  trial_asthma_digital.json  trial_breast_cdk46.json  trial_breast_her2_adc.json  trial_ckd_hif.json  trial_ckd_sglt2.json  trial_depression_ketamine.json  trial_depression_psilocybin.json  trial_diabetes_glp1.json  trial_diabetes_sglt2.json  trial_hiv_cure.json  trial_hiv_long_acting.json  trial_malaria_artesunate.json  trial_malaria_vaccine.json  trial_nsclc_immunotherapy.json  trial_nsclc_targeted.json  trial_ra_biologic.json  trial_ra_jak.json  trial_sickle_cell_gene.json  trial_sickle_cell_luspatercept.json  trial_tb_bedaquiline.json  trial_tb_prevention.json
backend/scripts/: llm_full_eval.py  llm_smoke_test.py
backend/src/ctm/: __init__.py  config.py
backend/src/ctm/api/: app.py  auth.py  dependencies.py  diagnostics.py
backend/src/ctm/audit/: logger.py
backend/src/ctm/cli/: main.py  tray.py
backend/src/ctm/db/: __init__.py  base.py  models.py
backend/src/ctm/embeddings/: base.py  ollama_embeddings.py  sentence_transformer.py
backend/src/ctm/evaluation/: __init__.py  ground_truth.py  (+1 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_ctgov_sync.py  test_evaluation.py  test_i18n.py  test_models.py  test_persistence.py  test_privacy.py
(+127 files in other folders)
