[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trialibre"
version = "0.1.0"
description = "Open-source clinical trial matching platform — by the American Institute for Medical Research"
readme = "README.md"
license = "MIT"
authors = [
    { name = "American Institute for Medical Research", email = "engineering@aimr.org" },
]
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic[email]>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "structlog>=24.0",

    # LLM Providers
    "anthropic>=0.40",
    "openai>=1.30",
    "httpx>=0.27",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",

    # Retrieval
    "rank-bm25>=0.2",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.6",
    "nltk>=3.8",
    "numpy>=1.26",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",

    # CLI
    "click>=8.1",
    "rich>=13.0",

    # Privacy / De-ID
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",

    # Ingestion
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pytesseract>=0.3",
    "pillow>=10.0",

    # i18n
    "langdetect>=1.0",

    # Evaluation
    "scikit-learn>=1.2",

    # Reports
    "weasyprint>=62.0",

    # Geo
    "geopy>=2.4",

    # System tray
    "pystray>=0.19",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.8", "torch>=2.2"]
medcpt = ["transformers>=4.39"]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx[http2]",
    "ruff>=0.5",
]

[project.scripts]
trialibre = "ctm.cli.main:cli"
trialibre-tray = "ctm.cli.tray:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctm"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
